--- a/sovtech-rickyconn/Server/package.json
+++ b/sovtech-rickyconn/Server/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.25.1",
+    "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
     "graphql": "^15.5.1"
   }
 }
