--- a/sovtech-rickyconn/Server/package.json
+++ b/sovtech-rickyconn/Server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-datasource-rest": "^0.14.0",
     "apollo-server": "^2.25.1",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
