--- a/sovtech-rickyconn/package.json
+++ b/sovtech-rickyconn/package.json
@@ -13,6 +13,7 @@
     "@types/react-router": "^5.1.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-jss": "^10.6.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.4",
